<resources>
    <string name="app_name">exer2_macaldo_b4l</string>
    <string name="header_text">Which Disney Character are you?</string>
    <string name="header_text2">You are</string>
    <string name="cd_disney">disney image</string>
    <string name="start">Start</string>
    <string name="Retry">Retry</string>
    <string name="ariel">Ariel is a bright, spirited, and headstrong mermaid princess with a strong passion for adventure and exploration. Her tendency to explore the more mysterious depths of the ocean (or more importantly, the world beyond the ocean) can lead to an array of problems to both herself, her friends, and in the confines of her personal life - as seen when she gets into an argument with her overprotective father, King Triton. Despite this, Ariel\'s selflessness, compassion and intuitive way of thinking often resolve such problems, as she always takes full responsibility for her actions.</string>
    <string name="cinderella">Despite being raised in toxicity and emotional abuse, Cinderella declared herself independent and strong-willed by remaining kind-hearted and self-loving unlike her cruel stepfamily, not allowing the bitterness surrounding her life to overtake her and morph her into someone as cruel as her stepfamily. She makes the most of her misfortunes by remaining optimistic of the possibilities of a brighter future, keeping herself preoccupied with enforced housework and friendly bonds built with her pets, and dozens of mice that have found themselves trapped over the years by Tremaine\'s mouse traps, only to be rescued and spared by Cinderella. In gratitude, the mice would become loyal companions to Cinderella, providing her with the company and serving as diligent helpers should something troubling occur. The devotion of the mice would ultimately play a crucial role in the young woman escaping her abusive household, thus furthering the example of how Cinderella\'s evergreen kindness towards others, despite her situation, would ultimately lead to her uprising.</string>
    <string name="elsa">As the queen regnant of the kingdom of Arendelle, Elsa appears calm, reserved, regal and - unlike her sister - graceful and poised. Beneath this cool and collected appearance, however, Elsa is quite turbulent; in truth, the Snow Queen was, for a majority of her young life, troubled by her abilities, a feeling which stems from a traumatic incident as a child. When she was younger, she had cared strongly for Anna and, despite being the more mature and cautious of the two sisters, Elsa was still quite playful and used her magic to have fun and goof off.</string>
    <string name="mickey">Mickey\'s most widely known traits are his wholesomeness and charisma. In contrast to this, Mickey is also rather mischievous; a scrappy, free-spirited rebel with a head full of curiosity, optimism and slight arrogance, Mickey has a habit of finding himself in a wide array of self-inflicted trouble—sometimes comical, sometimes highly consequential. Nevertheless, he is also quick-thinking and crafty and is thus able to save himself from the varying danger, ending out on top in the end. Because of his small size and limited resources, Mickey often relies on his wit to overcome adversity. His craftiness is also put into good use when looking for ways to make life easier for himself, even if he knowingly has to break a few rules in the process, being somewhat of a schemer in this sense.</string>
    <string name="mulan">Mulan is a responsible young woman, seen as a fearless warrior, leader, and beloved role model among her people, both men and women. Nevertheless, she is also fun-loving and jovial, especially when seen with Shang, whom she had developed a strong, romantic relationship with by the start second film. The sequel also shows her to be rather laid-back, open-minded, and philosophical, believing in the practice of following one\'s heart.</string>
    <string name="rapunzel">Rapunzel is a spirited, smart, clever, kind, playful, and a very adventurous girl in her late teens, though a bit naive. However, she is not afraid to stand up for herself or others when the situation calls for bravery. Having spent all of her life isolated in a tower with little else to do, she is proficiently educated in literature, and talented in almost all areas such as music and baking and even more advanced subjects like astronomy, as illustrated by her completely charted astronomical patterns. Her greatest passion is art, as indicated by the pervasive amount of painting on the walls inside the tower. While she longs to see the world beyond her window, she is very obedient to Mother Gothel. Despite having ambivalent feelings after leaving her tower in excitement to finally see the world, she confronts and rebels against Mother Gothel\'s wish of her returning to the tower after a short journey with Flynn Rider. She is quite daring; leaping from tall cliffs and swinging great lengths with her hair. She is completely immune to Flynn\'s so-called charms and has little tolerance for his antics, which usually results in her utilizing the pan against Flynn. She is also very charismatic; able to influence a group of pub thugs to share their dreams and convince Maximus, the palace steed of the Captain of the Guard, to postpone his pursuit of Flynn until she fulfills her dream on her birthday (which is heavily emphasized). Rapunzel is also known, particularly by Pascal, to be quite trustworthy and never ever breaks the promises she makes.</string>
    <string name="stitch"><![CDATA[Throughout the course of the entire Lilo & Stitch franchise, Stitch is depicted as a character that is unlikable to many people except Lilo (on rare occasions, even she falls out with him, most notably in Lilo & Stitch 2, where she cries out at him that he is \"bad and always will be bad!\" after he has an uncontrollable glitch attack), due to his destructive and temperamental behavior. It is interesting to note that people who are averse to Stitch (such as Mertle Edmonds, Gantu, and Dr. Hämsterviel) describe him as \"ugly and deformed\", while those who do love him (like Lilo, Nani, and Jumba) describe him as \"cute and fluffy\". This reflects the basic idea behind Stitch and also his cousins: they do not correspond to many established criteria of good physical appearance, having an extra pair of arms, misshapen heads or other odd features.]]></string>
    <string name="walle">Because WALL-E has been alone for hundreds of years, he has developed a \"glitch\": sentience and a personality and a mind of his own. He has become very curious and he collects anything interesting he can find during his job. Even though he still obediently follows his directive, WALL-E can get distracted, collecting some of the trash rather than compacting it all. His most prized possession, \"Hello, Dolly!\", teaches him how to hold hands, which he considers the way to say, \"I love you.\"</string>
    <string name="winnie">Pooh is described as being \"a bear of very little brain.\" He is generally kind and friendly towards everyone and has a demeanor that is childlike and innocent. Because of his limited intelligence, however, Pooh is extremely naive. Absent-minded and simple, he tends to process things at a slower pace than his friends, to the point of seeming disoriented. Pooh\'s sluggish nature also makes him somewhat passive in most situations.</string>
    <string name="woody">Woody is a loyal toy who has been Andy\'s favorite toy since kindergarten. Woody is a smart, determined, and passionate man, and would do anything for his nearest and dearest friends. He considers his friends as family and he tries his best to keep them together at all times. Yet, he is a flawed character. He has a lot of doubt, anger, frustration, uncertainty, and sadness, almost like a human. But despite his jumbled emotions, he tries his very best not to show them to his friends, so he can seem brave and courageous, but he\'s not afraid to confront or comfort his friends with utmost care.</string>
    <string name="disney">Find out which Disney character are you!</string>
</resources>
