<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_size_header" />

    <ImageView
        android:id="@+id/disney_image"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:layout_margin="@dimen/image_margin"
        android:contentDescription="@string/cd_disney"
        android:src="@drawable/disney"
        app:srcCompat="@drawable/disney" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="18sp" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Retry"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/disney_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding_scroll"
        android:paddingEnd="@dimen/padding_scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/disney_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disney"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>